--- a/src/component/ServicesCards/index.css
+++ b/src/component/ServicesCards/index.css
@@ -3,6 +3,7 @@
   color: white;
   padding: 60px 20px;
   font-family: "Poppins", sans-serif;
+  margin-left: 20px;
 }
 
 /* HEADER */
@@ -10,7 +11,7 @@
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
-  max-width: 1200px;
+  max-width: 1100px;
   margin: auto;
   margin-bottom: 50px;
   gap: 30px;
@@ -44,7 +45,7 @@
   display: grid;
   grid-template-columns: repeat(3, minmax(220px, 1fr));
   gap: 15px; /* ✅ spacing added */
-  max-width: 1200px;
+  max-width: 1100px;
   margin: auto;
 }
 
